--- a/careers.html
+++ b/careers.html
@@ -239,11 +239,11 @@
                     <div class="col-lg-3 col-md-6 footer-contact" style="font-size: 1.5rem;">
                         <h4>Contact Us</h4>
                         <p>
-                            1300 Center Avenue<br>
-                            Fresno, California<br>
-                            United States <br>
+                            LN, City<br>
+                            Gandhi Nagar, Indore<br>
+                            Madhya Pradesh <br>
                             <strong>Phone:</strong> +123-456-7890<br>
-                            <strong>Email:</strong> info@example.com<br>
+                            <strong>Email:</strong> info@Kodvix.com<br>
                         </p>
 
                         
