--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="#home" class="logo"><img src="./images/image.png" alt="" style="width: 170px !important; height: 60px !important; object-fit: cover !important; background-color: transparent !important;"></a>
+        <a href="#" class="logo"><img src="./images/image.png" alt="" style="width: 170px !important; height: 60px !important; object-fit: cover !important; background-color: transparent !important;"></a>
         <div class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
@@ -45,8 +45,8 @@
                 <li><a href="#about">about</a></li>
                 <li><a href="#service">services</a></li>
                 <li><a href="#team">team</a></li>
-                <li><a href="careers.html">career</a></li>
                 <li><a href="#contact">contact</a></li>
+                <li><a href="careers.html">career</a></li>
             </ul>
         </nav>
     </header>
@@ -513,7 +513,7 @@
                             <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#team">Team</a></li>
                             <li><i class="ion-ios-arrow-forward"></i> <a href="careers.html">Career</a></li>
                             <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#contact">Contact</a></li>
-                            <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#faq">FAQ</a></li>
+<!--                             <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#faq">FAQ</a></li> -->
                         </ul>
                     </div>
 
@@ -524,7 +524,7 @@
                             Gandhi Nagar, Indore<br>
                             Madhya Pradesh <br>
                             <strong>Phone:</strong> +123-456-7890<br>
-                            <strong>Email:</strong> info@example.com<br>
+                            <strong>Email:</strong> info@KO.com<br>
                         </p>
                     </div>
 
