--- a/careers.html
+++ b/careers.html
@@ -41,12 +41,12 @@
         <div class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
-                <li><a href="index.html">home</a></li>
-                <li><a href="index.html">about</a></li>
-                <li><a href="index.html">services</a></li>
-                <li><a href="index.html">team</a></li>
+                <li><a href="index.html#home">home</a></li>
+                <li><a href="index.html#about">about</a></li>
+                <li><a href="index.html#service">services</a></li>
+                <li><a href="index.html#team">team</a></li>
+                <li><a href="index.html#contact">contact</a></li>
                 <li><a href="careers.html">career</a></li>
-                <li><a href="index.html">contact</a></li>
             </ul>
         </nav>
     </header>
@@ -232,7 +232,7 @@
                             <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#team">Team</a></li>
                             <li><i class="ion-ios-arrow-forward"></i> <a href="careers.html">Career</a></li>
                             <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#contact">Contact</a></li>
-                            <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#faq">FAQ</a></li>
+                            <!-- <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#faq">FAQ</a></li> -->
                         </ul>
                     </div>
 
