--- a/careers.html
+++ b/careers.html
@@ -77,25 +77,25 @@
                     <h2 class="name">Apply For Which Post?</h2>
                     <label class="radio">
                         <input class="radio-one" type="radio" name="status" value="Web Designer" required>
-                        <span class="checkmark"></span> Web Designer
+                        <span class="checkmark"></span>  Full-Stack Developer
                     </label>
                     <label class="radio">
                         <input class="radio-two" type="radio" name="status" value="Web Developer" required>
-                        <span class="checkmark"></span> Web Developer
+                        <span class="checkmark"></span> Back-End Developer
                     </label>
                     <label class="radio">
                         <input class="radio-three" type="radio" name="status" value="Mobile App Designer" required>
-                        <span class="checkmark"></span> Mobile App Designer
+                        <span class="checkmark"></span> MERN Developer
                     </label>
                     <label class="radio">
                         <input class="radio-four" type="radio" name="status" value="Mobile App Developer" required>
-                        <span class="checkmark"></span> Mobile App Developer
+                        <span class="checkmark"></span> Web Developer 
                     </label>
                     <label class="radio">
                         <input class="radio-five" type="radio" name="status" value="Digital Marketer" required>
-                        <span class="checkmark"></span> Digital Marketer
+                        <span class="checkmark"></span> Full-Stack SalesForce Developer
                     </label>
-                </div>
+                </div><br/><br/>
 
 
                 <input type="url" id="link" name="experience" required placeholder="Paste Your CV Link"
@@ -217,7 +217,7 @@
                             <div class="social-links">
                                 <a href="https://www.facebook.com/"><i class="ion-logo-facebook"></i></a>
                                 <a href="https://twitter.com/login?lang=en"><i class="ion-logo-twitter"></i></a>
-                                <a href="https://www.linkedin.com/"><i class="ion-logo-linkedin"></i></a>
+                                <a href="https://in.linkedin.com/company/kodvix" target="_blank"><i class="ion-logo-linkedin"></i></a>
                                 <a href="https://www.instagram.com/"><i class="ion-logo-instagram"></i></a>
                                 <a
                                     href="https://accounts.google.com/servicelogin/signinchooser?flowName=GlifWebSignIn&flowEntry=ServiceLogin"><i
@@ -271,7 +271,7 @@
 
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-6 copyright" style="color: #fff; font-size: 1.3rem;">
+                <div class="col-md-12 copyright" style="color: #fff; font-size: 1.3rem;">
                     Copyright &copy; 2025 Kodvix Technologies. All Rights Reserved.
                 </div>
             </div>
