--- a/index.html
+++ b/index.html
@@ -398,84 +398,103 @@
     </div>
 </div>
 
+
+
 <style>
-    .validation-popup {
-        display: none;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 5px;
-        box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        z-index: 1000;
-    }
-    .popup-content {
-        position: relative;
-        text-align: center;
-    }
-    .close-popup {
-        position: absolute;
-        right: -10px;
-        top: -10px;
-        cursor: pointer;
-        font-size: 20px;
-    }
+   /* ===== Popup Styles ===== */
+.validation-popup {
+  display: none; /* Hidden by default */
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  backdrop-filter: blur(5px); /* Background blur */
+  background-color: rgba(0, 0, 0, 0.3);
+  justify-content: center;
+  align-items: center;
+}
+
+
+.popup-content {
+  background: white;
+  padding: 30px 40px;
+  border-radius: 10px;
+  text-align: center;
+  max-width: 700px;
+  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.3);
+  position: relative;
+}
+
+.popup-content p {
+  font-size: 16px;
+  color: #333;
+  margin: 0;
+}
+
+.close-popup {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 20px;
+  cursor: pointer;
+  color: #666;
+}
+
+
 </style>
+<script src="js/emailjs.js"></script>
 <script>
   function validateContactForm(event) {
-    event.preventDefault(); // stop the default form submission
+    event.preventDefault();
 
     const name = document.getElementById("name").value.trim();
     const phone = document.getElementById("phone").value.trim();
     const email = document.getElementById("email").value.trim();
     const message = document.getElementById("message").value.trim();
 
-    // Name
+    const phonePattern = /^[0-9]{10}$/;
+    const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+
     if (name === "") {
       alert("Please enter your name.");
       return false;
     }
 
-    // Phone (10 digit number)
-    const phonePattern = /^[0-9]{10}$/;
     if (!phonePattern.test(phone)) {
       alert("Please enter a valid 10-digit contact number.");
       return false;
     }
 
-    // Email (basic check)
-    const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
     if (!emailPattern.test(email)) {
       alert("Please enter a valid email address.");
       return false;
     }
+
     if (message === "") {
       alert("Please enter your message.");
       return false;
     }
-    sendMail();
 
-    return false; 
+    sendMail(); // if valid, call mail function
+
+    return false;
+  
   }
-    function showPopup(message) {
-        const popup = document.getElementById('validationPopup');
-        const popupMessage = document.getElementById('popupMessage');
-        popupMessage.textContent = message;
-        popup.style.display = 'block';
-    }
+  
+  
+  function showPopupMessage(message) {
+    const popup = document.getElementById("validationPopup");
+    const messageEl = document.getElementById("popupMessage");
 
-    document.querySelector('.close-popup').addEventListener('click', function() {
-        document.getElementById('validationPopup').style.display = 'none';
-    });
+    messageEl.textContent = message;
+    popup.style.display = "flex"; // Show popup
+    
+}
 
-    window.addEventListener('click', function(event) {
-        const popup = document.getElementById('validationPopup');
-        if (event.target === popup) {
-            popup.style.display = 'none';
-        }
-    });
+
+
 </script>
 
     <div class="footer">
