--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="#home" class="logo"><img src="./images/image.png" alt="" style="width: 170px !important; height: 60px !important; object-fit: cover !important; background-color: transparent !important;"></a>
+        <a href="#" class="logo"><img src="./images/image.png" alt="" style="width: 170px !important; height: 60px !important; object-fit: cover !important; background-color: transparent !important;"></a>
         <div class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
@@ -251,7 +251,7 @@
 <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 <script src="lib/lightbox/js/lightbox.min.js"></script>
 
-<section class="team testimonials mt-100">
+<section class="Our-team mt-100">
   <div class="container">
     <div class="section-header" style="text-align: center;">
       <h1 class="heading" id="team">our team</h1>
@@ -416,7 +416,6 @@
   align-items: center;
 }
 
-
 .popup-content {
   background: white;
   padding: 30px 40px;
@@ -441,7 +440,6 @@
   cursor: pointer;
   color: #666;
 }
-
 
 </style>
 <script src="js/emailjs.js"></script>
@@ -490,7 +488,6 @@
 
     messageEl.textContent = message;
     popup.style.display = "flex"; // Show popup
-    
 }
 
 
@@ -509,13 +506,13 @@
                             With a team of experienced professionals, we are dedicated to delivering high-quality
                             software products and services that help our clients achieve their goals.</p>
                             <div class="social-links">
-                                <a href="https://www.facebook.com/"><i class="ion-logo-facebook"></i></a>
-                                <a href="https://twitter.com/login?lang=en"><i class="ion-logo-twitter"></i></a>
+                                <!-- <a href="https://www.facebook.com/"><i class="ion-logo-facebook"></i></a> -->
+                                <!-- <a href="https://twitter.com/login?lang=en"><i class="ion-logo-twitter"></i></a> -->
                                 <a href="https://in.linkedin.com/company/kodvix" target="_blank"><i class="ion-logo-linkedin"></i></a>
-                                <a href="https://www.instagram.com/"><i class="ion-logo-instagram"></i></a>
-                                <a
-                                    href="https://accounts.google.com/servicelogin/signinchooser?flowName=GlifWebSignIn&flowEntry=ServiceLogin"><i
-                                        class="ion-logo-googleplus"></i></a>
+                                <!-- <a href="https://www.instagram.com/"><i class="ion-logo-instagram"></i></a> -->
+                                <!-- <a
+                                     href="https://accounts.google.com/servicelogin/signinchooser?flowName=GlifWebSignIn&flowEntry=ServiceLogin"><i 
+                                        class="ion-logo-googleplus"></i></a>  -->
                             </div>
                     </div>
 
@@ -535,7 +532,7 @@
                             LN, City<br>
                             Gandhi Nagar, Indore<br>
                             Madhya Pradesh <br>
-                            <strong>Phone:</strong> +123-456-7890<br>
+                            <strong>Phone:</strong> +91 738-938-9296 <br>
                             <strong>Email:</strong> info@KodVix.com<br>
                         </p>
                     </div>
