--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo"><img src="./images/image.png" alt="" style="width: 170px !important; height: 60px !important; object-fit: cover !important; background-color: transparent !important;"></a>
+        <a href="index.html" class="logo"><img src="./images/image.png" alt="" style="width: 170px !important; height: 60px !important; object-fit: cover !important; background-color: transparent !important;"></a>
         <div class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
